# pong

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: Game.cpp  Game.h  Utils.cpp  Utils.h  Window.cpp  Window.h  main.cpp
